--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Yahel Ness Website - About</title>
+        <title>Safe Seizure - About</title>
         <link rel="stylesheet" href="about.css">
         <script src="about.js"></script>
     </head>
