--- a/contact us.html
+++ b/contact us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Safe Seizure - Contact</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="contact us.css" />
         <script src="https://smtpjs.com/v3/smtp.js"></script>
