--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Yahel Ness Website Project</title>
+        <title>Safe Seizure</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css">
         <script src="index.js"></script>
