--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li class="bar-li"><a class="bar-link" href="contact us.html">Contact us</a></li>
             </ul>
         </div>
-        <h1 id="main-header">Home</h1>
+        <h1 id="main-header">Safe Seizure</h1>
         <div class="main-content">
             <div>
                 <h1 class="about-epilepsy-header">על אפילפסיה</h1>
