--- a/contact us.html
+++ b/contact us.html
@@ -24,5 +24,10 @@
                 <input type="button" value="Send" onclick="sendEmail()" />
             </form>
         </div>
+        <div>
+            <p>
+                כתובת:
+            </p>
+        </div>
     </body>
 </html>
