--- a/contact us.html
+++ b/contact us.html
@@ -24,10 +24,8 @@
                 <input type="button" value="Send" onclick="sendEmail()" />
             </form>
         </div>
-        <div>
             <p>
-                כתובת:
+                :כתובת
             </p>
-        </div>
     </body>
 </html>
