--- a/contact us.html
+++ b/contact us.html
@@ -24,7 +24,7 @@
                 <input type="button" value="Send" onclick="sendEmail()" />
             </form>
         </div>
-            <p>
+            <p class="adress">
                 :כתובת
             </p>
     </body>
